GNOME Bugzilla – Bug 703915
Flickr: Creating hierarchy fails due to bad condition
Last modified: 2013-07-19 12:31:15 UTC
Created attachment 248797 [details] [review] Modified condition The condition in processing entry is wrong. When we run into a container when creating hierarchy, the parent is always NULL, so the condition is true and processing is ceased.
Review of attachment 248797 [details] [review]: You should add the URL to the bugzilla bug in the commit message. ::: src/gom-flickr-miner.c @@ +110,3 @@ + if (op_type == OP_CREATE_HIEARCHY + && entry->parent == NULL + && !GRL_IS_MEDIA_BOX (entry->media)) Could have been on the same line too.
Thanks for the patch. Pushed after making the above adjustments. commit 422b02fcd2d58a9cd59171470e07253839495220 Author: Marek Chalupa <mchalupa@redhat.com> Date: Thu Jul 4 08:44:20 2013 +0200 flickr: Fix hierarchy creation Root containers don't have a parent, so only skip non-containers. https://bugzilla.gnome.org/show_bug.cgi?id=703915