flickr: Fix hierarchy creation

Root containers don't have a parent, so only skip non-containers.

https://bugzilla.gnome.org/show_bug.cgi?id=703915